--- a/pycam/Gui/gtk-interface/pycam-project.ui
+++ b/pycam/Gui/gtk-interface/pycam-project.ui
@@ -1212,6 +1212,7 @@
                                 <property name="invisible_char">&#x2022;</property>
                                 <property name="adjustment">toolradius</property>
                                 <property name="digits">3</property>
+                                <property name="numeric">True</property>
                               </object>
                               <packing>
                                 <property name="left_attach">1</property>
@@ -1227,6 +1228,7 @@
                                 <property name="invisible_char">&#x2022;</property>
                                 <property name="adjustment">torusradius</property>
                                 <property name="digits">3</property>
+                                <property name="numeric">True</property>
                               </object>
                               <packing>
                                 <property name="left_attach">1</property>
@@ -1299,6 +1301,7 @@
                                 <property name="can_focus">True</property>
                                 <property name="invisible_char">&#x2022;</property>
                                 <property name="adjustment">feedrate</property>
+                                <property name="numeric">True</property>
                               </object>
                               <packing>
                                 <property name="left_attach">1</property>
@@ -1311,6 +1314,7 @@
                                 <property name="can_focus">True</property>
                                 <property name="invisible_char">&#x2022;</property>
                                 <property name="adjustment">speed</property>
+                                <property name="numeric">True</property>
                               </object>
                               <packing>
                                 <property name="left_attach">1</property>
@@ -1660,7 +1664,7 @@ Only available for the Push Cutter.</property>
                         <child>
                           <object class="GtkTable" id="table7">
                             <property name="visible">True</property>
-                            <property name="n_rows">3</property>
+                            <property name="n_rows">4</property>
                             <property name="n_columns">2</property>
                             <property name="column_spacing">2</property>
                             <property name="row_spacing">2</property>
@@ -1671,6 +1675,8 @@ Only available for the Push Cutter.</property>
                                 <property name="label" translatable="yes">Overlap [%]:</property>
                               </object>
                               <packing>
+                                <property name="top_attach">1</property>
+                                <property name="bottom_attach">2</property>
                                 <property name="x_options">GTK_FILL</property>
                                 <property name="y_options">GTK_FILL</property>
                               </packing>
@@ -1681,10 +1687,13 @@ Only available for the Push Cutter.</property>
                                 <property name="can_focus">True</property>
                                 <property name="invisible_char">&#x2022;</property>
                                 <property name="adjustment">OverlapPercentValue</property>
+                                <property name="numeric">True</property>
                               </object>
                               <packing>
                                 <property name="left_attach">1</property>
                                 <property name="right_attach">2</property>
+                                <property name="top_attach">1</property>
+                                <property name="bottom_attach">2</property>
                                 <property name="x_options">GTK_FILL</property>
                                 <property name="y_options">GTK_FILL</property>
                               </packing>
@@ -1696,8 +1705,8 @@ Only available for the Push Cutter.</property>
                                 <property name="label" translatable="yes">Material Allowance:</property>
                               </object>
                               <packing>
-                                <property name="top_attach">1</property>
-                                <property name="bottom_attach">2</property>
+                                <property name="top_attach">2</property>
+                                <property name="bottom_attach">3</property>
                                 <property name="x_options">GTK_FILL</property>
                                 <property name="y_options">GTK_FILL</property>
                               </packing>
@@ -1712,12 +1721,13 @@ ODE support is currently required for this feature.</property>
                                 <property name="invisible_char">&#x2022;</property>
                                 <property name="adjustment">MaterialAllowanceValue</property>
                                 <property name="digits">2</property>
+                                <property name="numeric">True</property>
                               </object>
                               <packing>
                                 <property name="left_attach">1</property>
                                 <property name="right_attach">2</property>
-                                <property name="top_attach">1</property>
-                                <property name="bottom_attach">2</property>
+                                <property name="top_attach">2</property>
+                                <property name="bottom_attach">3</property>
                                 <property name="x_options">GTK_FILL</property>
                                 <property name="y_options">GTK_FILL</property>
                               </packing>
@@ -1730,12 +1740,13 @@ ODE support is currently required for this feature.</property>
                                 <property name="invisible_char">&#x2022;</property>
                                 <property name="adjustment">MaxStepDownValue</property>
                                 <property name="digits">2</property>
+                                <property name="numeric">True</property>
                               </object>
                               <packing>
                                 <property name="left_attach">1</property>
                                 <property name="right_attach">2</property>
-                                <property name="top_attach">2</property>
-                                <property name="bottom_attach">3</property>
+                                <property name="top_attach">3</property>
+                                <property name="bottom_attach">4</property>
                                 <property name="x_options">GTK_FILL</property>
                                 <property name="y_options">GTK_FILL</property>
                               </packing>
@@ -1747,8 +1758,35 @@ ODE support is currently required for this feature.</property>
                                 <property name="label" translatable="yes">Max. Step Down:</property>
                               </object>
                               <packing>
-                                <property name="top_attach">2</property>
-                                <property name="bottom_attach">3</property>
+                                <property name="top_attach">3</property>
+                                <property name="bottom_attach">4</property>
+                                <property name="x_options">GTK_FILL</property>
+                                <property name="y_options">GTK_FILL</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkLabel" id="SafetyHeightLabel">
+                                <property name="visible">True</property>
+                                <property name="xalign">0</property>
+                                <property name="label" translatable="yes">Safe Height:</property>
+                              </object>
+                              <packing>
+                                <property name="x_options">GTK_FILL</property>
+                                <property name="y_options">GTK_FILL</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkSpinButton" id="SafetyHeightControl">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="invisible_char">&#x2022;</property>
+                                <property name="adjustment">SafetyHeightValue</property>
+                                <property name="digits">1</property>
+                                <property name="numeric">True</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">1</property>
+                                <property name="right_attach">2</property>
                                 <property name="x_options">GTK_FILL</property>
                                 <property name="y_options">GTK_FILL</property>
                               </packing>
@@ -2324,6 +2362,13 @@ Install the "python-pyode" package to enable this feature.</property>
   </object>
   <object class="GtkAdjustment" id="OverlapPercentValue">
     <property name="upper">99</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+    <property name="page_size">10</property>
+  </object>
+  <object class="GtkAdjustment" id="SafetyHeightValue">
+    <property name="lower">-1000</property>
+    <property name="upper">1000</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
     <property name="page_size">10</property>
