--- a/pycam/Gui/gtk-interface/pycam-project.ui
+++ b/pycam/Gui/gtk-interface/pycam-project.ui
@@ -2416,7 +2416,7 @@
     <property name="stock_id">gtk-save</property>
   </object>
   <object class="GtkAction" id="WindowMenu">
-    <property name="label">Window</property>
+    <property name="label">Windows</property>
   </object>
   <object class="GtkToggleAction" id="Toggle3DView">
     <property name="label">3D View Window</property>
@@ -2659,5 +2659,52 @@
     <action-widgets>
       <action-widget response="0">CloseSettingsWindow</action-widget>
     </action-widgets>
+  </object>
+  <object class="GtkAboutDialog" id="AboutWindow">
+    <property name="border_width">5</property>
+    <property name="title" translatable="yes">About PyCAM</property>
+    <property name="window_position">center-on-parent</property>
+    <property name="type_hint">normal</property>
+    <property name="gravity">center</property>
+    <property name="has_separator">False</property>
+    <property name="program_name">PyCAM</property>
+    <property name="version">0.2</property>
+    <property name="copyright" translatable="yes">Copyright &#xA9; 2008-2010 Lode Leroy
+Copyright &#xA9; 2010 Lars Kruse</property>
+    <property name="comments" translatable="yes">Toolpath Generation for 3-Axis CNC machining</property>
+    <property name="website">http://sourceforge.net/projects/pycam/</property>
+    <property name="website_label" translatable="yes">Webseite des PyCAM-Projekts</property>
+    <property name="license" translatable="yes">This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+
+PyCAM is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+See the GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.</property>
+    <property name="wrap_license">True</property>
+    <child internal-child="vbox">
+      <object class="GtkVBox" id="dialog-vbox2">
+        <property name="visible">True</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
+        <child>
+          <placeholder/>
+        </child>
+        <child internal-child="action_area">
+          <object class="GtkHButtonBox" id="AboutWindowButtons">
+            <property name="visible">True</property>
+            <property name="layout_style">end</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="pack_type">end</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+      </object>
+    </child>
+  </object>
+  <object class="GtkAction" id="About">
+    <property name="label">About</property>
+    <property name="stock_id">gtk-about</property>
   </object>
 </interface>
