--- a/pycam/Gui/gtk-interface/pycam-project.ui
+++ b/pycam/Gui/gtk-interface/pycam-project.ui
@@ -925,15 +925,6 @@
                 <property name="orientation">vertical</property>
                 <property name="spacing">3</property>
                 <child>
-                  <object class="GtkHSeparator" id="hseparator8">
-                    <property name="visible">True</property>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="position">0</property>
-                  </packing>
-                </child>
-                <child>
                   <object class="GtkHBox" id="hbox9">
                     <property name="visible">True</property>
                     <property name="spacing">3</property>
@@ -1011,7 +1002,7 @@
                   </object>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="position">1</property>
+                    <property name="position">0</property>
                   </packing>
                 </child>
                 <child>
@@ -1020,7 +1011,7 @@
                   </object>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="position">2</property>
+                    <property name="position">1</property>
                   </packing>
                 </child>
                 <child>
@@ -1031,7 +1022,7 @@
                   </object>
                   <packing>
                     <property name="padding">7</property>
-                    <property name="position">3</property>
+                    <property name="position">2</property>
                   </packing>
                 </child>
                 <child>
@@ -1177,6 +1168,7 @@
                                     <property name="left_attach">1</property>
                                     <property name="right_attach">2</property>
                                     <property name="x_options">GTK_FILL</property>
+                                    <property name="y_options">GTK_FILL</property>
                                   </packing>
                                 </child>
                                 <child>
@@ -1194,6 +1186,7 @@
                                     <property name="top_attach">1</property>
                                     <property name="bottom_attach">2</property>
                                     <property name="x_options">GTK_FILL</property>
+                                    <property name="y_options">GTK_FILL</property>
                                   </packing>
                                 </child>
                               </object>
@@ -1231,17 +1224,24 @@
                         <child>
                           <object class="GtkAlignment" id="alignment19">
                             <property name="visible">True</property>
+                            <property name="top_padding">3</property>
                             <property name="left_padding">12</property>
                             <child>
                               <object class="GtkTable" id="table5">
                                 <property name="visible">True</property>
-                                <property name="n_rows">2</property>
+                                <property name="n_rows">3</property>
                                 <property name="n_columns">2</property>
+                                <property name="column_spacing">4</property>
+                                <property name="row_spacing">2</property>
                                 <child>
                                   <object class="GtkLabel" id="FeedrateLabel">
                                     <property name="visible">True</property>
                                     <property name="label" translatable="yes">Feedrate:</property>
                                   </object>
+                                  <packing>
+                                    <property name="top_attach">1</property>
+                                    <property name="bottom_attach">2</property>
+                                  </packing>
                                 </child>
                                 <child>
                                   <object class="GtkLabel" id="label7">
@@ -1249,8 +1249,8 @@
                                     <property name="label" translatable="yes">Speed:</property>
                                   </object>
                                   <packing>
-                                    <property name="top_attach">1</property>
-                                    <property name="bottom_attach">2</property>
+                                    <property name="top_attach">2</property>
+                                    <property name="bottom_attach">3</property>
                                   </packing>
                                 </child>
                                 <child>
@@ -1264,6 +1264,8 @@
                                   <packing>
                                     <property name="left_attach">1</property>
                                     <property name="right_attach">2</property>
+                                    <property name="top_attach">1</property>
+                                    <property name="bottom_attach">2</property>
                                   </packing>
                                 </child>
                                 <child>
@@ -1277,8 +1279,25 @@
                                   <packing>
                                     <property name="left_attach">1</property>
                                     <property name="right_attach">2</property>
-                                    <property name="top_attach">1</property>
-                                    <property name="bottom_attach">2</property>
+                                    <property name="top_attach">2</property>
+                                    <property name="bottom_attach">3</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkLabel" id="SpeedLimitsUnitLabel">
+                                    <property name="visible">True</property>
+                                    <property name="label" translatable="yes">Unit:</property>
+                                  </object>
+                                </child>
+                                <child>
+                                  <object class="GtkLabel" id="SpeedLimitsUnitValue">
+                                    <property name="visible">True</property>
+                                    <property name="tooltip_markup">Change the unit in the &lt;i&gt;Preferences&lt;/i&gt; window</property>
+                                    <property name="label" translatable="yes">inches/minute</property>
+                                  </object>
+                                  <packing>
+                                    <property name="left_attach">1</property>
+                                    <property name="right_attach">2</property>
                                   </packing>
                                 </child>
                               </object>
@@ -1299,7 +1318,7 @@
                     </child>
                   </object>
                   <packing>
-                    <property name="position">4</property>
+                    <property name="position">3</property>
                   </packing>
                 </child>
                 <child>
@@ -1308,7 +1327,7 @@
                   </object>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="position">5</property>
+                    <property name="position">4</property>
                   </packing>
                 </child>
                 <child>
@@ -1319,7 +1338,7 @@
                   </object>
                   <packing>
                     <property name="padding">7</property>
-                    <property name="position">6</property>
+                    <property name="position">5</property>
                   </packing>
                 </child>
                 <child>
@@ -1584,7 +1603,6 @@
                         </child>
                       </object>
                       <packing>
-                        <property name="expand">False</property>
                         <property name="position">2</property>
                       </packing>
                     </child>
@@ -1746,13 +1764,12 @@
                         </child>
                       </object>
                       <packing>
-                        <property name="expand">False</property>
                         <property name="position">4</property>
                       </packing>
                     </child>
                   </object>
                   <packing>
-                    <property name="position">7</property>
+                    <property name="position">6</property>
                   </packing>
                 </child>
                 <child>
@@ -1761,7 +1778,7 @@
                   </object>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="position">8</property>
+                    <property name="position">7</property>
                   </packing>
                 </child>
                 <child>
@@ -1773,7 +1790,7 @@
                   </object>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="position">9</property>
+                    <property name="position">8</property>
                   </packing>
                 </child>
               </object>
@@ -2522,7 +2539,7 @@
                                   <object class="GtkLabel" id="UnitLabel">
                                     <property name="visible">True</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">Unit:</property>
+                                    <property name="label" translatable="yes">Unit (for all dimensions):</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
